--- a/edu.html
+++ b/edu.html
@@ -283,7 +283,7 @@ footer{
       This hybrid approach makes quality education accessible while remaining financially sustainable with donor and partner support.
     </p>
   </div>
-  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766164104/ChatGPT_Image_Dec_19_2025_08_07_57_PM_usfrdk.png" class="shape-rounded">
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="shape-rounded">
 </section>
 
 <!-- SECTION 3 -->
@@ -340,7 +340,7 @@ footer{
       <strong>Student Support Need:</strong> While some learners contribute partial fees (approx. €30/month), many cannot fully afford costs. Donor funding helps bridge this gap, ensuring no capable student is excluded due to financial hardship.
     </p>
   </div>
-  <img src="https://images.pexels.com/photos/11025022/pexels-photo-11025022.jpeg" class="shape-leaf">
+  <img src="https://images.pexels.com/photos/5675818/pexels-photo-5675818.jpeg" class="shape-leaf">
 </section>
 
   
@@ -388,7 +388,7 @@ footer{
 
 <!-- SECTION: Life Skills & Education -->
 <section class="section">
-  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766230599/ChatGPT_Image_Dec_20_2025_02_31_12_PM_ltuaaf.jpg" class="shape-diagonal">
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766165018/ChatGPT_Image_Dec_19_2025_08_22_39_PM_xnkubz.png" class="shape-diagonal">
   <div class="text">
     <h2 data-key="s8-title">Life Skills & Education</h2>
     <ul>
