--- a/edu.html
+++ b/edu.html
@@ -144,16 +144,18 @@ footer{
   
 .section.swiss{ background:linear-gradient(135deg,#004080,#0066cc); color:#fff; }
 
-/* ================= FLOAT BUTTON ================= */
+/* floating home button */
 .floating-home-btn{
-  position:fixed;
-  bottom:28px;
-  right:28px;
-  border-radius:16px;
-  padding:10px 12px;
-  background:#0C2856;
-  border:none;
-  color:white;
+    position:fixed;
+    bottom:28px;
+    right:28px;
+    z-index:99999;
+    border-radius:16px;
+    padding:10px 12px;
+    background:#0C2856;
+    border:none;
+    color:white;
+    cursor:pointer;
 }
 
 /* ================= LANGUAGE DROPDOWN ================= */
@@ -406,13 +408,18 @@ footer{
 
 
 
-
-
-  
-<a href="https://webs-star.github.io/swissaid/" target="_blank">
-  <button class="floating-home-btn">🏠</button>
+<!-- Floating home button -->
+<a href="https://webs-star.github.io/swissaid/" target="_blank" aria-label="Home">
+  <button class="floating-home-btn">
+    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M3 12l9-9 9 9"/>
+      <path d="M9 21V9h6v12"/>
+    </svg>
+  </button>
 </a>
 
+
+ 
 <footer data-key="footer-text">
   © <script>document.write(new Date().getFullYear());</script> Hybrid Education Centre — All Rights Reserved.
 </footer>
