--- a/edu.html
+++ b/edu.html
@@ -246,7 +246,7 @@ footer{
     <h2 data-key="s1-title">Hybrid Education Overview</h2>
 
     <p data-key="s1-p1">
-      We provide flexible digital and in-school learning support to children and youth across Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa.
+      We provide flexible digital and in-school learning support to children and youth across Moyale, Nairobi, Murang’a, Kiambu, Nakuru, Machakos, and Mombasa.
     </p>
 
     <p data-key="s1-p2">
@@ -297,6 +297,7 @@ footer{
     <p data-key="s3-p1">Hybrid Education Centres are operational in:</p>
 
     <ul>
+        <li data-key="s3-li1"><strong>Moyale:</strong> Urban youth, startup incubation, digital entrepreneurship,Rural learning hubs,Vocational skills and blended learning.</li>
       <li data-key="s3-li1"><strong>Nairobi:</strong> Urban youth, startup incubation, digital entrepreneurship.</li>
       <li data-key="s3-li2"><strong>Murang’a:</strong> Rural learning hubs, girls mentorship.</li>
       <li data-key="s3-li3"><strong>Kiambu & Thika:</strong> ICT skills and coding centres.</li>
@@ -323,6 +324,7 @@ footer{
     <p data-key="s4-p1">
       <strong>Donor Opportunity:</strong> Support is needed for computers, screens, routers, software licenses, and internet subscriptions to maintain and expand access.
     </p>
+  
   </div>
 </section>
 
@@ -332,10 +334,14 @@ footer{
     <h2 data-key="s5-title">Program Impact</h2>
 
     <ul>
-      <li data-key="s5-li1">300+ students trained through operational centres</li>
+      <li data-key="s5-li1">100+ students trained through operational centres</li>
       <li data-key="s5-li2">Multiple youth-led startups launched</li>
       <li data-key="s5-li3">Improved employability and digital literacy</li>
       <li data-key="s5-li4">Reduced youth migration through local opportunity creation</li>
+      <li data-key="s5-li5">Youth empowered to start and manage their own entrepreneurship ventures</li>
+      <li data-key="s5-li6">Support for self-employment initiatives</li>
+      <li data-key="s5-li7">Access to microfinance from donors to start businesses</li>
+      <li data-key="s5-li8">Promotion of self-reliance among youth</li>
     </ul>
 
     <p data-key="s5-p1">
