--- a/edu.html
+++ b/edu.html
@@ -833,7 +833,7 @@ sw: {
   "s3-li3": "<strong>Kiambu & Thika:</strong> Ujuzi wa ICT na vituo vya coding.",
   "s3-li4": "<strong>Nakuru & Machakos:</strong> Vituo vya kujifunzia vya wikendi vya mchanganyiko.",
   "s3-li5": "<strong>Mombasa:</strong> Ujuzi wa kazi na ujifunzaji mchanganyiko.",
- "s3-li6": "<strong>Moyale:</strong>Vijana wa mijini, kuanzisha startups, ujasiriamali wa kidijitali
+ "s3-li6": "<strong>Moyale:</strong>Vijana wa mijini, kuanzisha startups, ujasiriamali wa kidijitali",
   "s4-title": "Kinachotokea Ndani ya Vituo Vyetu",
   "s4-li1": "Vituo 30+ vya kompyuta kwa kila kituo",
   "s4-li2": "Intaneti ya satellite (Starlink) yenye umeme wa dharura",
