--- a/youth.html
+++ b/youth.html
@@ -195,7 +195,7 @@ footer{ background:#222; color:#eee; padding:30px; margin-top:60px; }
 <section class="section">
     <div class="text">
         <h2 data-key="s1-title">Overview of Youth Empowerment</h2>
-        <p data-key="s1-p1">Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.</p>
+        <p data-key="s1-p1">Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.</p>
     </div>
     <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1766165018/ChatGPT_Image_Dec_19_2025_08_22_39_PM_xnkubz.png" class="shape-round">
 </section>
@@ -204,7 +204,7 @@ footer{ background:#222; color:#eee; padding:30px; margin-top:60px; }
 <section class="section">
     <div class="text">
         <h2 data-key="s2-title">Mentorship & Leadership Development</h2>
-        <p data-key="s2-p1">Youth mentorship programs provide guidance and leadership training in Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.</p>
+        <p data-key="s2-p1">Youth mentorship programs provide guidance and leadership training in Moyale, Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.</p>
     </div>
     <img src="https://images.pexels.com/photos/5675818/pexels-photo-5675818.jpeg" class="shape-rounded">
 </section>
@@ -248,9 +248,9 @@ document.addEventListener("DOMContentLoaded", () => {
     en:{
       "page-title":"Youth Empowerment",
       "s1-title":"Overview of Youth Empowerment",
-      "s1-p1":"Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.",
+      "s1-p1":"Our programs focus on actionable youth initiatives, mentorship, leadership, life skills, civic engagement, and education. We aim to equip young people in Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos, and Mombasa with the tools to thrive socially, economically, and digitally.",
       "s2-title":"Mentorship & Leadership Development",
-      "s2-p1":"Youth mentorship programs provide guidance and leadership training in Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.",
+      "s2-p1":"Youth mentorship programs provide guidance and leadership training in Moyale, Nairobi (Kibera youth hubs), Muranga (Kandara community projects), and Kiambu (Thika & Ruiru youth councils). These programs address civic responsibility, drug abuse prevention, and youth-led advocacy initiatives.",
       "s3-title":"Life Skills & Education",
       "s3-p1":"We offer programs on decision-making, problem-solving, civic engagement, STEM initiatives, vocational training, and internships. County-specific programs include Nakuru (Njoro youth sports & arts), Machakos (coding clubs & civic leadership), and Mombasa (Likoni & Kisauni volunteer projects).",
       "s4-title":"Entrepreneurship & Economic Opportunities",
@@ -264,9 +264,9 @@ document.addEventListener("DOMContentLoaded", () => {
     fr:{
       "page-title":"Autonomisation des Jeunes",
       "s1-title":"Aperçu de l'autonomisation des jeunes",
-      "s1-p1":"Nos programmes se concentrent sur des initiatives concrètes pour les jeunes, le mentorat, le leadership, les compétences de vie, l'engagement civique et l'éducation. Nous visons à équiper les jeunes de Nairobi, Muranga, Kiambu, Nakuru, Machakos et Mombasa avec les outils nécessaires pour réussir socialement, économiquement et numériquement.",
+      "s1-p1":"Nos programmes se concentrent sur des initiatives concrètes pour les jeunes, le mentorat, le leadership, les compétences de vie, l'engagement civique et l'éducation. Nous visons à équiper les jeunes de Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos et Mombasa avec les outils nécessaires pour réussir socialement, économiquement et numériquement.",
       "s2-title":"Mentorat & Développement du Leadership",
-      "s2-p1":"Les programmes de mentorat pour les jeunes offrent des conseils et une formation au leadership à Nairobi (centres pour jeunes de Kibera), Muranga (projets communautaires de Kandara) et Kiambu (conseils de jeunes de Thika et Ruiru). Ces programmes traitent de la responsabilité civique, de la prévention de la toxicomanie et des initiatives de plaidoyer dirigées par les jeunes.",
+      "s2-p1":"Les programmes de mentorat pour les jeunes offrent des conseils et une formation au leadership à Moyale, Nairobi (centres pour jeunes de Kibera), Muranga (projets communautaires de Kandara) et Kiambu (conseils de jeunes de Thika et Ruiru). Ces programmes traitent de la responsabilité civique, de la prévention de la toxicomanie et des initiatives de plaidoyer dirigées par les jeunes.",
       "s3-title":"Compétences de vie & Éducation",
       "s3-p1":"Nous proposons des programmes sur la prise de décision, la résolution de problèmes, l'engagement civique, les initiatives STEM, la formation professionnelle et les stages. Les programmes spécifiques aux comtés incluent Nakuru (sports et arts pour les jeunes de Njoro), Machakos (clubs de codage et leadership civique) et Mombasa (projets de volontariat à Likoni et Kisauni).",
       "s4-title":"Entrepreneuriat & Opportunités Économiques",
@@ -280,9 +280,9 @@ document.addEventListener("DOMContentLoaded", () => {
     de:{
       "page-title":"Jugendförderung",
       "s1-title":"Überblick über Jugendförderung",
-      "s1-p1":"Unsere Programme konzentrieren sich auf umsetzbare Jugendinitiativen, Mentoring, Führung, Lebenskompetenzen, bürgerschaftliches Engagement und Bildung. Wir möchten junge Menschen in Nairobi, Muranga, Kiambu, Nakuru, Machakos und Mombasa befähigen, sozial, wirtschaftlich und digital erfolgreich zu sein.",
+      "s1-p1":"Unsere Programme konzentrieren sich auf umsetzbare Jugendinitiativen, Mentoring, Führung, Lebenskompetenzen, bürgerschaftliches Engagement und Bildung. Wir möchten junge Menschen in Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos und Mombasa befähigen, sozial, wirtschaftlich und digital erfolgreich zu sein.",
       "s2-title":"Mentoring & Führungsentwicklung",
-      "s2-p1":"Jugend-Mentoring-Programme bieten Anleitung und Führungstraining in Nairobi (Kibera-Jugendzentren), Muranga (Kandara-Gemeinschaftsprojekte) und Kiambu (Thika & Ruiru Jugendräte). Diese Programme behandeln bürgerschaftliche Verantwortung, Drogenprävention und von Jugendlichen geleitete Advocacy-Initiativen.",
+      "s2-p1":"Jugend-Mentoring-Programme bieten Anleitung und Führungstraining in Moyale, Nairobi (Kibera-Jugendzentren), Muranga (Kandara-Gemeinschaftsprojekte) und Kiambu (Thika & Ruiru Jugendräte). Diese Programme behandeln bürgerschaftliche Verantwortung, Drogenprävention und von Jugendlichen geleitete Advocacy-Initiativen.",
       "s3-title":"Lebenskompetenzen & Bildung",
       "s3-p1":"Wir bieten Programme zu Entscheidungsfindung, Problemlösung, bürgerschaftlichem Engagement, STEM-Initiativen, Berufsbildung und Praktika an. County-spezifische Programme umfassen Nakuru (Njoro Jugendsport & Kunst), Machakos (Coding-Clubs & Civic Leadership) und Mombasa (Likoni & Kisauni Freiwilligenprojekte).",
       "s4-title":"Unternehmertum & Wirtschaftliche Chancen",
@@ -296,9 +296,9 @@ document.addEventListener("DOMContentLoaded", () => {
     es:{
       "page-title":"Empoderamiento Juvenil",
       "s1-title":"Visión General del Empoderamiento Juvenil",
-      "s1-p1":"Nuestros programas se centran en iniciativas juveniles accionables, mentoría, liderazgo, habilidades para la vida, participación cívica y educación. Nuestro objetivo es equipar a los jóvenes en Nairobi, Muranga, Kiambu, Nakuru, Machakos y Mombasa con las herramientas para prosperar social, económica y digitalmente.",
+      "s1-p1":"Nuestros programas se centran en iniciativas juveniles accionables, mentoría, liderazgo, habilidades para la vida, participación cívica y educación. Nuestro objetivo es equipar a los jóvenes en Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos y Mombasa con las herramientas para prosperar social, económica y digitalmente.",
       "s2-title":"Mentoría y Desarrollo de Liderazgo",
-      "s2-p1":"Los programas de mentoría juvenil brindan orientación y formación en liderazgo en Nairobi (centros juveniles de Kibera), Muranga (proyectos comunitarios de Kandara) y Kiambu (consejos juveniles de Thika y Ruiru). Estos programas abordan la responsabilidad cívica, la prevención del consumo de drogas y las iniciativas de defensa lideradas por jóvenes.",
+      "s2-p1":"Los programas de mentoría juvenil brindan orientación y formación en liderazgo en Moyale, Nairobi (centros juveniles de Kibera), Muranga (proyectos comunitarios de Kandara) y Kiambu (consejos juveniles de Thika y Ruiru). Estos programas abordan la responsabilidad cívica, la prevención del consumo de drogas y las iniciativas de defensa lideradas por jóvenes.",
       "s3-title":"Habilidades para la Vida y Educación",
       "s3-p1":"Ofrecemos programas sobre toma de decisiones, resolución de problemas, participación cívica, iniciativas STEM, formación profesional y pasantías. Los programas específicos de cada condado incluyen Nakuru (deportes y artes juveniles de Njoro), Machakos (clubes de codificación y liderazgo cívico) y Mombasa (proyectos de voluntariado de Likoni y Kisauni).",
       "s4-title":"Emprendimiento y Oportunidades Económicas",
@@ -312,9 +312,9 @@ document.addEventListener("DOMContentLoaded", () => {
     it:{
       "page-title":"Empowerment Giovanile",
       "s1-title":"Panoramica dell'Empowerment Giovanile",
-      "s1-p1":"I nostri programmi si concentrano su iniziative giovanili concrete, mentoring, leadership, competenze di vita, impegno civico ed educazione. Puntiamo a fornire ai giovani di Nairobi, Muranga, Kiambu, Nakuru, Machakos e Mombasa gli strumenti per prosperare socialmente, economicamente e digitalmente.",
+      "s1-p1":"I nostri programmi si concentrano su iniziative giovanili concrete, mentoring, leadership, competenze di vita, impegno civico ed educazione. Puntiamo a fornire ai giovani di Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos e Mombasa gli strumenti per prosperare socialmente, economicamente e digitalmente.",
       "s2-title":"Mentoring e Sviluppo della Leadership",
-      "s2-p1":"I programmi di mentoring giovanile offrono guida e formazione alla leadership a Nairobi (hub giovanili di Kibera), Muranga (progetti comunitari di Kandara) e Kiambu (consigli giovanili di Thika e Ruiru). Questi programmi affrontano responsabilità civica, prevenzione della droga e iniziative di advocacy guidate dai giovani.",
+      "s2-p1":"I programmi di mentoring giovanile offrono guida e formazione alla leadership a Moyale, Nairobi (hub giovanili di Kibera), Muranga (progetti comunitari di Kandara) e Kiambu (consigli giovanili di Thika e Ruiru). Questi programmi affrontano responsabilità civica, prevenzione della droga e iniziative di advocacy guidate dai giovani.",
       "s3-title":"Competenze di Vita ed Educazione",
       "s3-p1":"Offriamo programmi su decision-making, problem-solving, impegno civico, iniziative STEM, formazione professionale e stage. I programmi specifici per contea includono Nakuru (sport e arti giovanili a Njoro), Machakos (club di coding e leadership civica) e Mombasa (progetti di volontariato a Likoni e Kisauni).",
       "s4-title":"Imprenditorialità e Opportunità Economiche",
@@ -328,9 +328,9 @@ document.addEventListener("DOMContentLoaded", () => {
     sw:{
       "page-title":"Uwezeshaji Vijana",
       "s1-title":"Muhtasari wa Uwezeshaji Vijana",
-      "s1-p1":"Programu zetu zinazingatia miradi halisi ya vijana, malezi, uongozi, ujuzi wa maisha, ushiriki wa kijamii na elimu. Tunakusudia kuwapa vijana wa Nairobi, Muranga, Kiambu, Nakuru, Machakos, na Mombasa zana za kufanikisha maisha yao kijamii, kiuchumi na kidijitali.",
+      "s1-p1":"Programu zetu zinazingatia miradi halisi ya vijana, malezi, uongozi, ujuzi wa maisha, ushiriki wa kijamii na elimu. Tunakusudia kuwapa vijana wa Moyale, Nairobi, Muranga, Kiambu, Nakuru, Machakos, na Mombasa zana za kufanikisha maisha yao kijamii, kiuchumi na kidijitali.",
       "s2-title":"Malezi & Maendeleo ya Uongozi",
-      "s2-p1":"Programu za malezi kwa vijana hutoa mwongozo na mafunzo ya uongozi Nairobi (Kibera youth hubs), Muranga (miradi ya jamii ya Kandara), na Kiambu (Thika & Ruiru youth councils). Programu hizi zinashughulikia uwajibikaji wa kijamii, kuzuia matumizi ya madawa ya kulevya, na miradi ya utetezi inayotungwa na vijana.",
+      "s2-p1":"Programu za malezi kwa vijana hutoa mwongozo na mafunzo ya uongozi Moyale, Nairobi (Kibera youth hubs), Muranga (miradi ya jamii ya Kandara), na Kiambu (Thika & Ruiru youth councils). Programu hizi zinashughulikia uwajibikaji wa kijamii, kuzuia matumizi ya madawa ya kulevya, na miradi ya utetezi inayotungwa na vijana.",
       "s3-title":"Ujuzi wa Maisha & Elimu",
       "s3-p1":"Tunatoa programu za maamuzi, utatuzi wa matatizo, ushiriki wa kijamii, miradi ya STEM, mafunzo ya ufundi, na mafunzo ya ndani. Miradi maalum ya kaunti ni pamoja na Nakuru (michezo & sanaa ya vijana Njoro), Machakos (clubs za coding & uongozi wa kijamii), na Mombasa (miradi ya kujitolea Likoni & Kisauni).",
       "s4-title":"Ujasiriamali & Fursa za Kiuchumi",
